--- a/package.json
+++ b/package.json
@@ -2,9 +2,15 @@
   "name": "stutzjs",
   "version": "0.0.1",
   "description": "Formats currency values",
-  "main": "index.js",
+  "main": "dist/stutz.js",
   "scripts": {
-    "test": "test"
+    "bundle": "node node_modules/typescript/bin/tsc --declaration && npm run browserify && npm run uglify",
+    "browserify": "node node_modules/browserify/bin/cmd.js dist/index.js --outfile dist/stutz.js",
+    "browserify-test": "node node_modules/browserify/bin/cmd.js dist/index.spec.js --outfile dist/stutz.spec.js",
+    "uglify": "node node_modules/uglify-js/bin/uglifyjs dist/stutz.js --compress --mangle --output dist/stutz.min.js",
+    "start": "node node_modules/typescript/bin/tsc --watch",
+    "test": "npm run bundle && npm run browserify-test && node node_modules/karma/bin/karma start --single-run",
+    "test-dev": "npm run browserify-test && node node_modules/karma/bin/karma start"
   },
   "repository": {
     "type": "git",
@@ -22,9 +28,18 @@
   },
   "homepage": "https://github.com/elekktrisch/stutzjs#readme",
   "dependencies": {
-    "big.js": "^3.1.3"
+    "big.js": "3.1.3"
   },
   "devDependencies": {
-    "webpack": "^1.12.13"
+    "browserify": "^13.0.0",
+    "jasmine": "^2.4.1",
+    "jasmine-core": "^2.4.1",
+    "karma": "^0.13.19",
+    "karma-jasmine": "^0.3.7",
+    "karma-phantomjs-launcher": "^1.0.0",
+    "phantomjs-prebuilt": "^2.1.3",
+    "typescript": "^1.7.5",
+    "typings": "^0.6.6",
+    "uglify-js": "^2.6.1"
   }
 }
