--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   },
   "homepage": "https://github.com/elekktrisch/stutzjs#readme",
   "dependencies": {
-    "big.js": "3.1.3"
+    "big.js": "3.1.3",
+    "core-js": "^2.0.3"
   },
   "devDependencies": {
     "browserify": "^13.0.0",
