--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   "homepage": "https://github.com/elekktrisch/stutzjs#readme",
   "dependencies": {
     "big.js": "3.1.3",
-    "core-js": "^2.0.3"
+    "core-js": "^2.0.3",
+    "numeral": "^1.5.3"
   },
   "devDependencies": {
     "browserify": "^13.0.0",
