--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "Formats currency values",
   "main": "dist/stutz.js",
+  "typings": "dist/index.d.ts",
   "scripts": {
     "bundle": "node node_modules/typescript/bin/tsc --declaration && npm run browserify && npm run uglify",
     "browserify": "node node_modules/browserify/bin/cmd.js dist/index.js --outfile dist/stutz.js",
