--- a/package.json
+++ b/package.json
@@ -5,13 +5,12 @@
   "main": "dist/stutz.js",
   "typings": "dist/index.d.ts",
   "scripts": {
-    "bundle": "node node_modules/typescript/bin/tsc --declaration && npm run browserify && npm run uglify",
-    "browserify": "node node_modules/browserify/bin/cmd.js dist/index.js --outfile dist/stutz.standalone.js",
-    "browserify-test": "node node_modules/browserify/bin/cmd.js dist/index.spec.js --outfile dist/stutz.spec.js",
-    "uglify": "node node_modules/uglify-js/bin/uglifyjs dist/stutz.standalone.js --compress --output dist/stutz.standalone.min.js",
-    "start": "node node_modules/typescript/bin/tsc --watch",
-    "test": "npm run bundle && npm run browserify-test && node node_modules/karma/bin/karma start --single-run",
-    "test-dev": "npm run browserify-test && node node_modules/karma/bin/karma start"
+    "prestart": "npm install",
+    "start": "webpack-dev-server --TARGET=DEV",
+    "bundle": "webpack src/index.global.ts dist/stutz.global.js",
+    "browserify": "node node_modules/browserify/bin/cmd.js dist/stutz.global.js --outfile dist/stutz.standalone.js",
+    "test": "node node_modules/karma/bin/karma start --single-run",
+    "test-dev": "node node_modules/karma/bin/karma start --TARGET=DEV"
   },
   "repository": {
     "type": "git",
@@ -34,15 +33,24 @@
     "numeral": "^1.5.3"
   },
   "devDependencies": {
+    "babel-core": "^6.4.5",
+    "babel-loader": "^6.2.2",
     "browserify": "^13.0.0",
+    "imports-loader": "^0.6.5",
     "jasmine": "^2.4.1",
     "jasmine-core": "^2.4.1",
     "karma": "^0.13.19",
+    "karma-chrome-launcher": "^0.2.2",
     "karma-jasmine": "^0.3.7",
     "karma-phantomjs-launcher": "^1.0.0",
+    "karma-webpack": "^1.7.0",
+    "minimist": "^1.2.0",
+    "path": "^0.12.7",
     "phantomjs-prebuilt": "^2.1.3",
+    "ts-loader": "^0.8.0",
     "typescript": "^1.7.5",
     "typings": "^0.6.6",
-    "uglify-js": "^2.6.1"
+    "webpack": "^1.12.13",
+    "webpack-dev-server": "^1.14.1"
   }
 }
