--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
 language: node_js
 node_js:
-  - 4.1.1
+  - 0.10
+  - 4
+  - 5
 before_script:
   - npm install
-  - npm install-dts
+  - npm run install-dts
 script:
   - npm run test
   - npm run bundle
