--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "karma-chrome-launcher": "^0.2.2",
     "karma-jasmine": "^0.3.7",
     "karma-phantomjs-launcher": "^1.0.0",
+    "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.7.0",
     "minimist": "^1.2.0",
     "path": "^0.12.7",
