--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "stutzjs",
-  "version": "0.0.3-alpha.1",
+  "version": "0.0.4",
   "description": "Formats currency values",
   "main": "dist/stutz.js",
   "typings": "dist/index.d.ts",
