--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "stutzjs",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "Formats currency values",
-  "main": "dist/stutz.js",
+  "main": "dist/stutz.standalone.js",
   "typings": "dist/index.d.ts",
   "scripts": {
     "prestart": "npm install",
