implemented sum method

--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "stutzjs",
-  "version": "0.0.10",
+  "version": "0.0.11",
   "description": "Formats currency values",
   "main": "dist/stutz.standalone.js",
-  "typings": "dist/index.d.ts",
+  "typings": "dist/stutz.d.ts",
   "scripts": {
     "prestart": "npm install",
     "install-dts": "node node_modules/typings/dist/bin/typings.js install",
     "start": "webpack-dev-server --TARGET=DEV",
-    "bundle": "webpack src/index.global.ts dist/stutz.global.js",
+    "bundle": "webpack src/stutz.global.ts dist/stutz.global.js",
     "browserify": "node node_modules/browserify/bin/cmd.js dist/stutz.global.js --outfile dist/stutz.standalone.js",
     "test": "node node_modules/karma/bin/karma start --single-run",
     "test-dev": "node node_modules/karma/bin/karma start --TARGET=DEV"
